Update BookReader.java