@@ -1,11 +1,12 @@
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Scanner;
 
 public class BookReader {
     public String book = "";
     public MyLinkedList<String> words = new MyLinkedList<>();
+    public MyLinkedList<String> wordsAndSeparators = new MyLinkedList<>();
 
     public BookReader(String fileName) {
         readBook(fileName);
@@ -13,12 +14,10 @@ public class BookReader {
     }
 
     public void readBook(String fileName) {
-        System.out.print("Reading input file \"./" + fileName + "\"...");
-
-        //File file = new File(fileName);
+        System.out.print("Reading input file \"./" + fileName + "\"... ");
         long t1 = System.nanoTime();
         try {
-            book = new String(Files.readAllBytes(Paths.get(fileName)), StandardCharsets.UTF_8);
+            book = Files.readString(Paths.get(fileName));
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -27,54 +26,32 @@ public class BookReader {
         System.out.println(book.length() + " characters in " + ((t2 - t1) / 1000000) + " milliseconds.");
     }
 
-    public void parseWords() {
-        System.out.print("\nFinding words and adding them to a linked list... in ");
-
-        char[] characters = {
-                '0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
-                'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k',
-                'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w',
-                'x', 'y', 'z',
-                'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K',
-                'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W',
-                'X', 'Y', 'Z', '\''
-        };
-        char[] arr = book.toCharArray();
-        String s = "";
-        int k = 0;
-        //O(n) loop
-        long t1 = System.nanoTime();
-        for (int i = 0; i < arr.length; i++) {
-            boolean found = false;
-            innerloop:
-            //O(1) constant loop
-            for (int j = 0; j < characters.length; j++) {
-                if (arr[i] == characters[j]) {
-                    found = true;
-                    break innerloop;
+    public void parseWords(){
+        long duration;
+        long start = System.currentTimeMillis();
+        StringBuilder sb = new StringBuilder();
+        Scanner sc = new Scanner(book);
+        sc.useDelimiter("");
+        while(sc.hasNext()){
+            String s = sc.next();
+            Character ch = s.charAt(0);
+            if((ch.compareTo('A') >= 0 && ch.compareTo('Z') <= 0) || (ch.compareTo('a') >= 0 && ch.compareTo('z') <= 0)
+                    || (ch.compareTo('0') >= 0 && ch.compareTo('9') <= 0) || ch.equals('\'') ) {
+                sb.append(ch);
+            } else {
+                wordsAndSeparators.addToLast(String.valueOf(ch));
+                if (!sb.isEmpty()){
+                    wordsAndSeparators.addToLast(String.valueOf(sb));
+                    words.addToLast(String.valueOf(sb));
+                    sb.delete(0, sb.length());
                 }
-            }
-            if (found) {
-                s += String.valueOf(arr[i]);
-                found = false;
-            } else if (!s.isBlank()) {
-                if (k == 0) {
-                    words.addBefore(s);
-                    words.first();
-                    k++;
-                } else {
-                    words.addAfter(s);
-                    words.next();
-                }
-                s = "";
             }
         }
-        long t2 = System.nanoTime();
-        System.out.println(((t2 - t1) / 1000000) + " milliseconds.");
+        sc.close();
+        long now = System.currentTimeMillis();
+        duration = now - start;
+        System.out.println("\nFinding words and adding them to a linked list... in " + duration + " milliseconds.");
         System.out.println("The linked list has a length of " + words.size() + ".");
-    }
-
-    public MyLinkedList<String> wordsAndSeparators() {
-        return words;
+        System.out.println();
     }
 }
